Fixed homepage scroll jump

--- a/client/scss/components/_home.scss
+++ b/client/scss/components/_home.scss
@@ -11,7 +11,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        bottom: 0;
+        height: 100%;
         width: 100%;
         will-change: left, width;
     }
@@ -48,9 +48,9 @@
                 .img {
                     position: absolute;
                     top: 0;
-                    right: 0;
-                    bottom: 0;
                     left: 0;
+                    width: 100%;
+                    height: 100%;
                     background-size: cover;
                     background-position: center;
                 }
